Use Schema Registry dep for schema ordering