@@ -24,7 +24,6 @@ import com.michelin.kafkactl.model.Resource;
 import java.io.File;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -39,8 +38,8 @@ class FileServiceTest {
     void shouldComputeYamlFileListRecursive() {
         List<File> actual = fileService.computeYamlFileList(new File("src/test/resources"), true);
         assertEquals(
-                List.of("config.yml", "resources-in-order.yml", "resources-unordered.yml", "topic.yml"),
-                actual.stream().map(File::getName).sorted().collect(Collectors.toList()));
+                List.of("config.yml", "ordered-resources.yml", "unordered-resources.yml", "topic.yml"),
+                actual.stream().map(File::getName).sorted().toList());
     }
 
     @Test
